force-app/main/default/objects/Revisit__c/Revisit__c.object-meta.xml
<CustomObject>
    <label>Revisit</label>
    <nameField>
        <label>Revisit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revisits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>