force-app/main/default/objects/Revisit__c/fields/Applicant_is_owner_of_the_property__c.field-meta.xml
<CustomField>
    <fullName>Applicant_is_owner_of_the_property__c</fullName>
    <label>Applicant Is Owner Of The Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>