force-app/main/default/objects/Revisit__c/fields/Does_property_mortgaged_with_any_financi__c.field-meta.xml
<CustomField>
    <fullName>Does_property_mortgaged_with_any_financi__c</fullName>
    <label>Does Property Mortgaged With Any Financi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>