force-app/main/default/objects/Revisit__c/fields/Employee_Name_Of_Person_Revisited__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_Of_Person_Revisited__c</fullName>
    <label>Employee Name Of Person Revisited</label>
    <length>80</length>
    <type>Text</type>
</CustomField>