force-app/main/default/objects/Revisit__c/fields/Employee_No_of_Person_Revisited__c.field-meta.xml
<CustomField>
    <fullName>Employee_No_of_Person_Revisited__c</fullName>
    <label>Employee No of Person Revisited</label>
    <length>5</length>
    <type>Text</type>
</CustomField>