force-app/main/default/objects/Revisit__c/fields/Mortgage_details_of_property__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_details_of_property__c</fullName>
    <label>Mortgage Details Of Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>