force-app/main/default/objects/Revisit__c/fields/Reason_for_revist__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_revist__c</fullName>
    <label>Reason For Revisit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same day revisit as document less than 6 months</fullName>
            </value>
            <value>
                <fullName>Next day revisit as Living &amp; mortgage property different</fullName>
            </value>
            <value>
                <fullName>Sample Value 1</fullName>
                <isActive>false</isActive>
                <label>Sample Value 1</label>
            </value>
            <value>
                <fullName>Sample Value 2</fullName>
                <isActive>false</isActive>
                <label>Sample Value 2</label>
            </value>
            <value>
                <fullName>Sample Value 3</fullName>
                <isActive>false</isActive>
                <label>Sample Value 3</label>
            </value>
            <value>
                <fullName>Sample Value 4</fullName>
                <isActive>false</isActive>
                <label>Sample Value 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>