force-app/main/default/objects/Revisit__c/fields/Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Visit__c</fullName>
    <label>Reason For Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Character reconfirmation</fullName>
            </value>
            <value>
                <fullName>Income reconfirmation</fullName>
            </value>
            <value>
                <fullName>Property reconfirmation as no boundaries in document</fullName>
            </value>
            <value>
                <fullName>Property reconfirmation as no pathway in document</fullName>
            </value>
            <value>
                <fullName>Property reconfirmation as no measurement in document</fullName>
            </value>
            <value>
                <fullName>Property reconfirmation as unable to measure the area of property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>