force-app/main/default/objects/Revisit__c/fields/Revisit_date__c.field-meta.xml
<CustomField>
    <fullName>Revisit_date__c</fullName>
    <label>Revisit Date</label>
    <type>Date</type>
</CustomField>