force-app/main/default/objects/Revisit__c/fields/Revisit_done__c.field-meta.xml
<CustomField>
    <fullName>Revisit_done__c</fullName>
    <label>Revisit Done</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>