force-app/main/default/objects/Revisit__c/fields/Revisit_Type__c.field-meta.xml
<CustomField>
    <fullName>Revisit_Type__c</fullName>
    <label>Revisit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Revisit</fullName>
            </value>
            <value>
                <fullName>Senior Revisit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>