force-app/main/default/objects/Revisit__c/fields/Senior_Auditor_Confirmation_Visit__c.field-meta.xml
<CustomField>
    <fullName>Senior_Auditor_Confirmation_Visit__c</fullName>
    <label>Senior/Auditor Confirmation Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>