force-app/main/default/objects/Revisit__c/fields/Senior_Person_Comments__c.field-meta.xml
<CustomField>
    <fullName>Senior_Person_Comments__c</fullName>
    <label>Senior Person Comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>