force-app/main/default/objects/Revisit__c/fields/Years_of_possession_of_the_property__c.field-meta.xml
<CustomField>
    <fullName>Years_of_possession_of_the_property__c</fullName>
    <label>Years Of Possession Of The Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>